--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,10 @@ plugins {
 }
 
 group = project.maven_group
-version = project.minecraft_version + "-" + project.mod_version
+version = "${project.minecraft_version}-${project.mod_version}"
 
-boolean isNeo = minecraft_version == "1.21.1"
-
-configurations {
-    shadow
-    implementation.extendsFrom(shadow)
-}
+def isNeo = minecraft_version == "1.21.1"
+def isOld = minecraft_version == "1.16.5"
 
 base {
     archivesName = project.archives_name
@@ -31,66 +27,51 @@ loom {
 }
 
 repositories {
-    maven {
-        name = 'ParchmentMC'
-        url = 'https://maven.parchmentmc.org'
-    }
+    maven { name = 'ParchmentMC'; url = 'https://maven.parchmentmc.org' }
     maven {
         name = "Modrinth"
         url = "https://api.modrinth.com/maven"
-        content {
-            includeGroup "maven.modrinth"
-        }
+        content { includeGroup "maven.modrinth" }
     }
     maven {
         url "https://cursemaven.com"
-        content {
-            includeGroup "curse.maven"
-        }
+        content { includeGroup "curse.maven" }
     }
-    maven {
-        name = 'NeoForged'
-        url = 'https://maven.neoforged.net/releases'
-    }
+    maven { name = 'NeoForged'; url = 'https://maven.neoforged.net/releases' }
 }
 
-String forgeVersion = ""
-String parchmentVersion = ""
+def versionMap = [
+        "1.20.1": [forge: "47.4.2", parchment: "2023.09.03"],
+        "1.19.2": [forge: "43.5.0", parchment: "2022.11.27"],
+        "1.18.2": [forge: "40.3.10", parchment: "2022.11.06"],
+        "1.16.5": [forge: "36.2.42", parchment: "2022.03.06"],
+        "1.21.1": [neo  : "21.1.192", parchment: "2024.11.17"]
+]
 
-boolean isOld = false
+def versionInfo = versionMap[minecraft_version]
+if (versionInfo == null) throw new IllegalArgumentException("Unsupported version: ${minecraft_version}")
 
-if (isNeo) {
-    parchmentVersion = "2024.11.17"
-} else {
-    if (minecraft_version == "1.20.1") {
-        forgeVersion = "47.4.2"
-        parchmentVersion = "2023.09.03"
-    } else if (minecraft_version == "1.19.2") {
-        forgeVersion = "43.5.0"
-        parchmentVersion = "2022.11.27"
-    } else if (minecraft_version == "1.18.2") {
-        forgeVersion = "40.3.10"
-        parchmentVersion = "2022.11.06"
-    } else if (minecraft_version == "1.16.5") {
-        forgeVersion = "36.2.42"
-        parchmentVersion = "2022.03.06"
-        isOld = true
-    } else {
-        throw new IllegalArgumentException();
-    }
+String forgeVersion = versionInfo.forge ?: ""
+String parchmentVersion = versionInfo.parchment
+
+configurations {
+    shadow
+    implementation.extendsFrom(shadow)
 }
 
 dependencies {
     minecraft "net.minecraft:minecraft:$project.minecraft_version"
-    mappings loom.layered() {
+    mappings loom.layered {
         officialMojangMappings()
         parchment("org.parchmentmc.data:parchment-${project.minecraft_version}:${parchmentVersion}@zip")
     }
+
     if (isNeo) {
-        neoForge "net.neoforged:neoforge:21.1.192"
+        neoForge "net.neoforged:neoforge:${versionInfo.neo}"
     } else {
         forge "net.minecraftforge:forge:${project.minecraft_version}-${forgeVersion}"
     }
+
     shadow(annotationProcessor("io.github.llamalad7:mixinextras-common:${project.mixinextras_version}"))
 }
 
@@ -98,13 +79,12 @@ shadowJar {
     configurations = [project.configurations.shadow]
     relocate "com.llamalad7.mixinextras", "me.kall.lead.mixinextras"
     mergeServiceFiles()
-
     archiveClassifier = "dev-shadow"
 }
 
+
 processResources {
     inputs.property 'version', project.version
-
     if (isNeo) {
         filesMatching('META-INF/neoforge.mods.toml') {
             expand version: project.version
@@ -120,19 +100,13 @@ processResources {
 
 java {
     withSourcesJar()
+    def javaVer = isNeo ? JavaVersion.VERSION_21 : (isOld ? JavaVersion.VERSION_1_8 : JavaVersion.VERSION_17)
+    sourceCompatibility = javaVer
+    targetCompatibility = javaVer
+}
 
-    if (isNeo) {
-        sourceCompatibility = JavaVersion.VERSION_21
-        targetCompatibility = JavaVersion.VERSION_21
-    } else {
-        if (isOld) {
-            sourceCompatibility = JavaVersion.VERSION_1_8
-            targetCompatibility = JavaVersion.VERSION_1_8
-        } else {
-            sourceCompatibility = JavaVersion.VERSION_17
-            targetCompatibility = JavaVersion.VERSION_17
-        }
-    }
+tasks.withType(JavaCompile).configureEach {
+    it.options.release = isNeo ? 21 : (isOld ? 8 : 17)
 }
 
 remapJar {
@@ -141,29 +115,8 @@ remapJar {
     archiveClassifier = null
 }
 
-tasks.withType(JavaCompile).configureEach {
-    if (isNeo) {
-        it.options.release = 21
-    } else {
-        if (isOld) {
-            it.options.release = 8
-        } else {
-            it.options.release = 17
-        }
-    }
-}
-
 String currentChangeLog = file("CHANGELOG.md").getText("UTF-8")
-
-String[] javaVersions = ["Java 17", "Java 21", "Java 22"]
-
-if (isNeo) {
-    javaVersions = ["Java 21", "Java 22"]
-} else {
-    if (isOld) {
-        javaVersions = ["Java 17", "Java 21", "Java 22", "Java 8"]
-    }
-}
+def javaVersions = isNeo ? ["Java 21", "Java 22"] : (isOld ? ["Java 8", "Java 17", "Java 21", "Java 22"] : ["Java 17", "Java 21", "Java 22"])
 
 tasks.register("publishCurseForge", TaskPublishCurseForge) {
     apiToken = System.getenv("CURSEFORGE_TOKEN")
@@ -179,7 +132,6 @@ tasks.register("publishCurseForge", TaskPublishCurseForge) {
     mainFile.addGameVersion(minecraft_version)
 
     def sourcesFile = mainFile.withAdditionalFile(sourcesJar)
-
     sourcesFile.changelog = currentChangeLog
     sourcesFile.changelogType = "markdown"
 }
